<?xml version="1.0"?>
<package format="2">
  <name>gimbal_aimer</name>
  <version>0.1.0</version>
  <description>Aims a single-axis gimbal at a point in space.</description>
  <maintainer email="matthew@matthewedwards.co.nz">Matthew Edwards</maintainer>
  <author email="matthew@matthewedwards.co.nz">Matthew Edwards</author><license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rospy</depend>
</package>
